--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="language">اللغة</string>
     <string name="amoled_mode">وضع Amoled</string>
     <string name="amoled_mode_sub">إذا تم تمكين لون الأسطح فسيتم ضبطه على الظلام المطلق في الوضع الليلي</string>
@@ -2000,11 +2002,14 @@
     <string name="horizontal_border_thickness">سمك الحدود الأفقية</string>
     <string name="vertical_border_thickness">سمك الحدود العمودية</string>
     <plurals name="color_count">
-        <item quantity="zero"/>
+        <item quantity="zero" />
         <item quantity="one">%s اللون</item>
-        <item quantity="two"/>
+        <item quantity="two" />
         <item quantity="few">%s الألوان</item>
         <item quantity="many">%s الألوان</item>
         <item quantity="other">%s الألوان</item>
     </plurals>
+    <string name="current_model_not_chunkable">النموذج الحالي لا يدعم التقطيع، ستتم معالجة الصورة بالأبعاد الأصلية، وقد يتسبب ذلك في استهلاك كبير للذاكرة ومشكلات مع الأجهزة المنخفضة الجودة</string>
+    <string name="chunking_disabled">تم تعطيل التقطيع، ستتم معالجة الصورة بالأبعاد الأصلية، وقد يتسبب ذلك في استهلاك كبير للذاكرة ومشكلات مع الأجهزة المنخفضة الجودة ولكنه قد يعطي نتائج أفضل عند الاستدلال</string>
+    <string name="chunking">التقطيع</string>
 </resources>
