--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="pick_image">Выберыце малюнак для пачатку</string>
     <string name="height">Вышыня %1$s</string>
     <string name="explicit">Спецыфічны</string>
@@ -2005,4 +2007,7 @@
         <item quantity="many">%s колераў</item>
         <item quantity="other">%s колераў</item>
     </plurals>
+    <string name="current_model_not_chunkable">Бягучая мадэль не падтрымлівае разбіццё на кавалкі, выява будзе апрацоўвацца ў зыходных памерах, гэта можа выклікаць вялікае спажыванне памяці і праблемы з прыладамі нізкага ўзроўню</string>
+    <string name="chunking_disabled">Раздзяленне на кавалкі адключана, відарыс будзе апрацоўвацца ў зыходных памерах, гэта можа выклікаць вялікае спажыванне памяці і праблемы з прыладамі нізкага класа, але можа даць лепшыя вынікі высновы</string>
+    <string name="chunking">Чанкінг</string>
 </resources>
