--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2008,4 +2008,7 @@
         <item quantity="few">%s spalvos</item>
         <item quantity="other">%s spalvos</item>
     </plurals>
+    <string name="current_model_not_chunkable">Dabartinis modelis nepalaiko smulkinimo, vaizdas bus apdorojamas originaliais matmenimis, todėl gali sunaudoti daug atminties ir kilti problemų su žemos klasės įrenginiais</string>
+    <string name="chunking_disabled">Dalijimas išjungtas, vaizdas bus apdorojamas originalių matmenų, todėl gali sunaudoti daug atminties ir gali kilti problemų su žemos klasės įrenginiais, bet gali duoti geresnių išvadų rezultatų</string>
+    <string name="chunking">Susmulkinti</string>
 </resources>
