--- a/core/resources/src/main/res/values-pt-rBR/strings.xml
+++ b/core/resources/src/main/res/values-pt-rBR/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="smth_went_wrong">Algo deu errado: %1$s</string>
     <string name="size">Tamanho %1$s</string>
     <string name="loading">Carregando…</string>
@@ -2003,4 +2005,7 @@
     <string name="type_removebg">Remover glicemia</string>
     <string name="horizontal_border_thickness">Espessura da borda horizontal</string>
     <string name="vertical_border_thickness">Espessura da borda vertical</string>
+    <string name="current_model_not_chunkable">O modelo atual não suporta chunking, a imagem será processada nas dimensões originais, isso pode causar alto consumo de memória e problemas com dispositivos de baixo custo</string>
+    <string name="chunking_disabled">Chunking desativado, a imagem será processada nas dimensões originais, o que pode causar alto consumo de memória e problemas com dispositivos de baixo custo, mas pode fornecer melhores resultados na inferência</string>
+    <string name="chunking">Pedaço</string>
 </resources>
